src/objects/ACED_Channel_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>ACED_ChannelAttr_Unique__c</fullName>
        <inlineHelpText>This is a helptext for Channel Attribute already exist</inlineHelpText>
        <label>Channel Attribute already exist</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for Actual</inlineHelpText>
        <label>Actual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <inlineHelpText>Enter the attribute here, dont use # for attributes since its auto concatenated</inlineHelpText>
        <label>Attribute Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <inlineHelpText>This is a helptext for Channel</inlineHelpText>
        <label>Channel</label>
        <referenceTo>ACED_Channel__c</referenceTo>
        <relationshipLabel>Channel Attributes</relationshipLabel>
        <relationshipName>Channel_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This is a helptext for Description</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialUnique__c</fullName>
        <inlineHelpText>This is a helptext for &apos;Please uncheck existing Potential Flag&apos;</inlineHelpText>
        <label>Please uncheck existing Potential Flag</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for Potential</inlineHelpText>
        <label>Potential</label>
        <type>Checkbox</type>
    </fields>
    <label>Channel Attribute</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Attribute ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACED_Potential_Mutual_Exclusive</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Actual__c, Potential__c  )</errorConditionFormula>
        <errorMessage>You cannot mark same attribute as both Actual and Potential</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UniqueActualAttribue</fullName>
        <active>true</active>
        <errorConditionFormula>Channel__r.Act_Channel_Attributes__c   = 1 &amp;&amp; (ISCHANGED(Actual__c) || ISNEW())  &amp;&amp; Actual__c</errorConditionFormula>
        <errorDisplayField>Actual__c</errorDisplayField>
        <errorMessage>You can specify one Actual attribute for a channel. There are more than one attribute specified as actual for this channel, please check</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UniquePotentailAttribue</fullName>
        <active>true</active>
        <errorConditionFormula>Channel__r.Pot_Channel_Attributes__c = 1 &amp;&amp; (ISCHANGED(Potential__c) || ISNEW()) &amp;&amp; Potential__c</errorConditionFormula>
        <errorDisplayField>Potential__c</errorDisplayField>
        <errorMessage>You can specify one Potential attribute for a channel. There are more than one attribute specified as Potential for this channel, please check</errorMessage>
    </validationRules>
</CustomObject>